--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,9 @@
 <h2>Events</h2>
 <% @events.each do |single_event| %>
-	<%= single_event.name %> -
+	<%= link_to single_event.name, event_path(single_event) %> -
 	<%= single_event.description %> <br />
 	<%= single_event.location %> <br />
 	<%= link_to "Edit", edit_event_path(single_event) %>
+	<%= link_to "Destroy", single_event, method: :delete, data: {confirm: 'Are you sure?' } %>
 	<br />
 <% end %>
