--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,29 @@
-<h2>Events</h2>
-<% @events.each do |single_event| %>
-	<%= link_to single_event.name, event_path(single_event) %> -
-	<%= single_event.description %> <br />
-	<%= single_event.location %> <br />
-	<%= link_to "Edit", edit_event_path(single_event) %>
-	<%= link_to "Destroy", single_event, method: :delete, data: {confirm: 'Are you sure?' } %>
-	<br />
-<% end %>
+<div class ="her-unit">
+	<h1>Event Tracker</h1>
+	<p>Planning an event? Track the participants here!</p>
+	<p><%= link_to "Creat New Event", new_event_url, :class => "brn btn-primary btn-large" %></p>
+</div>
+
+<table class="table table-striped">
+	<thead>
+		<th>Event</th>
+		<th>Total Participants</th>
+		<th>Actions</td>
+	</thead>
+	<tbody>
+		<% @events.each do |event| %>
+		<tr>
+			<td>
+				<%= link_to event.name, event_path(event) %> - <%= event.description %><br />
+				<%= event.location %>
+			</td>
+			<td><%= event.total_participants %>
+			</td>
+			<td>
+				<%= link_to "Edit", edit_event_path(event) %>
+				<%= link_to "Destroy", event, method: :delete, data: {confirm: 'Are you sure?' } %>
+			</td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
